Fix search z-index

--- a/styles.scss
+++ b/styles.scss
@@ -82,6 +82,10 @@
 	color: #a8a8a8;
 }
 
+.wikibase-entitysearch-list {
+	z-index: 1099 !important;
+}
+
 .navbar-main {
 	top: 40px;
 	background-color: #bfd7ea;
